# GigaChess

./: Cargo.toml  README.md  actions.yml
core/: Cargo.toml
core/src/: game.rs  lib.rs  message.rs
engines/: Cargo.toml
giga_chess/: Cargo.toml
old-src/: lib.rs  rust_jni.rs
src/: algorithm.rs  algorithms.rs  chess.rs  chess_like.rs  contrasting_chess.rs  lib.rs  rust_jni.rs
