[package]
name = "giga_core"
version = "0.1.0"
edition = "2018"
description = "Data structures and utility functions to be used by GigaChess compatable engines"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

smallvec = { version = "1.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

